--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -36,6 +36,7 @@
     <string name="msg_confirm_delete">Wirklich löschen %1$s \"%2$s\"?</string>
     <string name="msg_overwrite">Überschreiben %1$s \"%2$s\"</string>
     <string name="msg_delete">Löschen %1$s \"%2$s\"</string>
+    <string name="msg_delete_button">Löschen %1$s&#8230;</string>
     <string name="msg_create_new_title">Neu erstellen %s</string>
     <string name="msg_create_new">Neu erstellen %s&#8230;</string>
     <string name="msg_add">Diese Schaltfläche fügt alle Titel des Ordners und der Unterordner zur Wiedergabeliste hinzu.</string>
@@ -268,6 +269,10 @@
     <string name="choose_image">Wählen Sie ein Bild&#8230;</string>
     <string name="accessibility">Zugänglichkeit</string>
     <string name="place_the_playlist_to_the_right">Legen Sie die Wiedergabeliste auf der rechten Seite</string>
+    <string name="sustain">Erhalten</string>
+    <string name="diffusion">Diffusion</string>
+    <string name="msg_immersive">&#8634; Bewegen Sie das Gerät (Vorsicht!)</string>
+    <string name="msg_no_sensors">Tut mir leid, aber Ihr Gerät nicht über die erforderlichen Sensoren :(</string>
 
     <string name="bt_packages_sent">Nachricht gesendet:</string>
     <string name="bt_fps">Nachrichten pro Sekunde&#8230;</string>
