Adjusting the Bluetooth visualizer

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -283,6 +283,7 @@
     <string name="bt_stop">Stop Bluetooth Übertragung</string>
     <string name="bt_pairing">Bitte nach dem Pairen der Geräte nochmals versuchen, die Verbindung herzustellen.</string>
     <string name="bt_connection_error">Fehler während der Verbindung zum Bluetooth Gerät :(</string>
+    <string name="bt_communication_error">Fehler bei der Kommunikation mit Bluetooth-Gerät :(</string>
     <string name="bt_needs_to_be_enabled">Bluetooth muss aktiviert werden, bevor fortgesetzt werden kann :(</string>
     <string name="bt_not_supported">Bluetooth nicht unterstützt :(</string>
     <string name="bt_discovery_error">Fehler während der suche nach Bluetooth Geräten :(</string>
