--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -283,6 +283,7 @@
     <string name="bt_stop">Parar transmissão Bluetooth</string>
     <string name="bt_pairing">Por favor, tente conectar-se de novo depois de parear o dispositivo.</string>
     <string name="bt_connection_error">Ocorreu um erro ao se conectar ao dispositivo Bluetooth :(</string>
+    <string name="bt_communication_error">Ocorreu um erro na comunicação com o dispositivo Bluetooth :(</string>
     <string name="bt_needs_to_be_enabled">Você precisa habilitar o Bluetooth para poder prosseguir :(</string>
     <string name="bt_not_supported">Bluetooth não suportado :(</string>
     <string name="bt_discovery_error">Ocorreu um erro na procura pelos dispositivos Bluetooth :(</string>
