--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -279,8 +279,8 @@
     <string name="bt_sample_count">Muestras por mensaje&#8230;</string>
     <string name="bt_connect">Conectar a un dispositivo Bluetooth&#8230;</string>
     <string name="bt_disconnect">Desconectar dispositivo Bluetooth</string>
-    <string name="bt_start">Iniciar la transmisión Bluetooth</string>
-    <string name="bt_stop">Detener la transmisión de Bluetooth</string>
+    <string name="bt_start">Iniciar el envío de muestras de frecuencia</string>
+    <string name="bt_stop">Detener el envío de muestras de frecuencia</string>
     <string name="bt_pairing">Por favor, intente conectarse de nuevo después de emparejar el dispositivo.</string>
     <string name="bt_connection_error">Se ha producido un error al conectar con el dispositivo Bluetooth :(</string>
     <string name="bt_communication_error">Se ha producido un error durante la comunicación con el dispositivo Bluetooth :(</string>
