--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -276,11 +276,11 @@
 
     <string name="bt_packages_sent">Mensagens enviadas:</string>
     <string name="bt_fps">Mensagens por segundo&#8230;</string>
-    <string name="bt_sample_count">Amostras por mensagem&#8230;</string>
+    <string name="bt_sample_count">Bins por mensagem&#8230;</string>
     <string name="bt_connect">Conectar a um dispositivo Bluetooth&#8230;</string>
     <string name="bt_disconnect">Desconectar dispositivo Bluetooth</string>
-    <string name="bt_start">Iniciar transmissão Bluetooth</string>
-    <string name="bt_stop">Parar transmissão Bluetooth</string>
+    <string name="bt_start">Iniciar envio dos bins de frequência</string>
+    <string name="bt_stop">Parar envio dos bins de frequência</string>
     <string name="bt_pairing">Por favor, tente conectar-se de novo depois de parear o dispositivo.</string>
     <string name="bt_connection_error">Ocorreu um erro ao se conectar ao dispositivo Bluetooth :(</string>
     <string name="bt_communication_error">Ocorreu um erro na comunicação com o dispositivo Bluetooth :(</string>
