--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -273,6 +273,7 @@
     <string name="diffusion">Diffusion</string>
     <string name="msg_immersive">&#8634; Bewegen Sie das Gerät (Vorsicht!)</string>
     <string name="msg_no_sensors">Tut mir leid, aber Ihr Gerät nicht über die erforderlichen Sensoren :(</string>
+    <string name="tutorial">Lernprogramm&#8230;</string>
 
     <string name="bt_packages_sent">Nachricht gesendet:</string>
     <string name="bt_fps">Nachrichten pro Sekunde&#8230;</string>
