--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -273,6 +273,7 @@
     <string name="diffusion">Диффузия</string>
     <string name="msg_immersive">&#8634; Наведите устройство вокруг (будьте осторожны!)</string>
     <string name="msg_no_sensors">Извините, но устройство не имеет необходимых датчиков :(</string>
+    <string name="tutorial">Учебник&#8230;</string>
 
     <string name="bt_packages_sent">Messages sent:</string>
     <string name="bt_fps">Messages per second&#8230;</string>
