--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -273,6 +273,7 @@
     <string name="diffusion">Diffusion</string>
     <string name="msg_immersive">&#8634; Move your device around (be careful!)</string>
     <string name="msg_no_sensors">Sorry, but your device does not have the necessary sensors :(</string>
+    <string name="tutorial">Tutorial&#8230;</string>
 
     <string name="bt_packages_sent">Messages sent:</string>
     <string name="bt_fps">Messages per second&#8230;</string>
