--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -275,6 +275,8 @@
     <string name="msg_no_sensors">Вибачте, але пристрій не має необхідних датчиків :(</string>
     <string name="tutorial">Підручник&#8230;</string>
 
+    <string name="bt_active">Bluetooth active&#8230;</string>
+    <string name="bt_error">Bluetooth error!</string>
     <string name="bt_packages_sent">Messages sent:</string>
     <string name="bt_fps">Messages per second&#8230;</string>
     <string name="bt_sample_count">Bins per message&#8230;</string>
