--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -275,6 +275,8 @@
     <string name="msg_no_sensors">Sorry, but your device does not have the necessary sensors :(</string>
     <string name="tutorial">Tutorial&#8230;</string>
 
+    <string name="bt_active">Bluetooth active&#8230;</string>
+    <string name="bt_error">Bluetooth error!</string>
     <string name="bt_packages_sent">Messages sent:</string>
     <string name="bt_fps">Messages per second&#8230;</string>
     <string name="bt_sample_count">Bins per message&#8230;</string>
