--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -269,17 +269,18 @@
     <string name="choose_image">Escolher imagem&#8230;</string>
     <string name="accessibility">Acessibilidade</string>
     <string name="place_the_playlist_to_the_right">Posicionar a lista de reprodução à direita</string>
-    <string name="sustain">Sustentação</string>
+    <string name="sustain">Sustentação:</string>
     <string name="diffusion">Difusão</string>
     <string name="msg_immersive">&#8634; Mova seu aparelho ao redor (seja cuidadoso!)</string>
     <string name="msg_no_sensors">Desculpe, mas seu aparelho não possui os sensores necessários :(</string>
     <string name="tutorial">Tutorial&#8230;</string>
 
+    <string name="bt_inactive">Bluetooth inativo</string>
     <string name="bt_active">Bluetooth ativo&#8230;</string>
     <string name="bt_error">Erro no Bluetooth!</string>
     <string name="bt_packages_sent">Mensagens enviadas:</string>
-    <string name="bt_fps">Mensagens por segundo&#8230;</string>
-    <string name="bt_sample_count">Bins por mensagem&#8230;</string>
+    <string name="bt_fps">Mensagens por segundo:</string>
+    <string name="bt_sample_count">Bins por mensagem:</string>
     <string name="bt_connect">Conectar a um dispositivo Bluetooth&#8230;</string>
     <string name="bt_disconnect">Desconectar dispositivo Bluetooth</string>
     <string name="bt_start">Iniciar envio dos bins de frequência</string>
