--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -269,17 +269,18 @@
     <string name="choose_image">Choose image&#8230;</string>
     <string name="accessibility">Accessibility</string>
     <string name="place_the_playlist_to_the_right">Place the playlist to the right</string>
-    <string name="sustain">Sustain</string>
+    <string name="sustain">Sustain:</string>
     <string name="diffusion">Diffusion</string>
     <string name="msg_immersive">&#8634; Move your device around (be careful!)</string>
     <string name="msg_no_sensors">Sorry, but your device does not have the necessary sensors :(</string>
     <string name="tutorial">Tutorial&#8230;</string>
 
+    <string name="bt_inactive">Bluetooth inactive</string>
     <string name="bt_active">Bluetooth active&#8230;</string>
     <string name="bt_error">Bluetooth error!</string>
     <string name="bt_packages_sent">Messages sent:</string>
-    <string name="bt_fps">Messages per second&#8230;</string>
-    <string name="bt_sample_count">Bins per message&#8230;</string>
+    <string name="bt_fps">Messages per second:</string>
+    <string name="bt_sample_count">Bins per message:</string>
     <string name="bt_connect">Connect to a Bluetooth device&#8230;</string>
     <string name="bt_disconnect">Disconnect Bluetooth device</string>
     <string name="bt_start">Start sending frequency bins</string>
