--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -269,17 +269,18 @@
     <string name="choose_image">Wählen Sie ein Bild&#8230;</string>
     <string name="accessibility">Zugänglichkeit</string>
     <string name="place_the_playlist_to_the_right">Legen Sie die Wiedergabeliste auf der rechten Seite</string>
-    <string name="sustain">Erhalten</string>
+    <string name="sustain">Erhalten:</string>
     <string name="diffusion">Diffusion</string>
     <string name="msg_immersive">&#8634; Bewegen Sie das Gerät (Vorsicht!)</string>
     <string name="msg_no_sensors">Tut mir leid, aber Ihr Gerät nicht über die erforderlichen Sensoren :(</string>
     <string name="tutorial">Lernprogramm&#8230;</string>
 
+    <string name="bt_inactive">Bluetooth inaktiv</string>
     <string name="bt_active">Bluetooth aktiv&#8230;</string>
     <string name="bt_error">Bluetooth-Fehler!</string>
     <string name="bt_packages_sent">Nachricht gesendet:</string>
-    <string name="bt_fps">Nachrichten pro Sekunde&#8230;</string>
-    <string name="bt_sample_count">Frequenzbänder pro Nachricht&#8230;</string>
+    <string name="bt_fps">Nachrichten pro Sekunde:</string>
+    <string name="bt_sample_count">Frequenzbänder pro Nachricht:</string>
     <string name="bt_connect">Verbunden mit einem Bluetooth Gerät&#8230;</string>
     <string name="bt_disconnect">Getrenntes Bluetooth Gerät</string>
     <string name="bt_start">Starten Sie das Senden der Frequenzbänder</string>
