--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -269,17 +269,18 @@
     <string name="choose_image">Виберіть зображення&#8230;</string>
     <string name="accessibility">Доступність</string>
     <string name="place_the_playlist_to_the_right">Помістіть відтворення на правій стороні екрану</string>
-    <string name="sustain">Підтримувати</string>
+    <string name="sustain">Підтримувати:</string>
     <string name="diffusion">Дифузія</string>
     <string name="msg_immersive">&#8634; Наведіть пристрій навколо (будьте обережні!)</string>
     <string name="msg_no_sensors">Вибачте, але пристрій не має необхідних датчиків :(</string>
     <string name="tutorial">Підручник&#8230;</string>
 
+    <string name="bt_inactive">Bluetooth inactive</string>
     <string name="bt_active">Bluetooth active&#8230;</string>
     <string name="bt_error">Bluetooth error!</string>
     <string name="bt_packages_sent">Messages sent:</string>
-    <string name="bt_fps">Messages per second&#8230;</string>
-    <string name="bt_sample_count">Bins per message&#8230;</string>
+    <string name="bt_fps">Messages per second:</string>
+    <string name="bt_sample_count">Bins per message:</string>
     <string name="bt_connect">Connect to a Bluetooth device&#8230;</string>
     <string name="bt_disconnect">Disconnect Bluetooth device</string>
     <string name="bt_start">Start sending frequency bins</string>
