--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -142,8 +142,12 @@
     <string name="title">Назва</string>
     <string name="artist">Виконавець</string>
     <string name="album">Альбом</string>
+    <string name="albumL">1 альбом</string>
+    <string name="albumsL">альбоми</string>
     <string name="album_art">Обкладинки альбомів</string>
     <string name="track">Трек</string>
+    <string name="trackL">1 трек</string>
+    <string name="tracksL">треків</string>
     <string name="duration">Тривалість</string>
     <string name="year">рік</string>
     <string name="no_info">-</string>
