--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -84,7 +84,7 @@
     <string name="up">Up</string>
     <string name="home">Home</string>
     <string name="add_url_title">Add URL</string>
-    <string name="add_url">URL&#8230;</string>
+    <string name="add_url">URL</string>
     <string name="url">URL</string>
     <string name="description">Description</string>
     <string name="favorite">Favorite</string>
@@ -114,7 +114,7 @@
     <string name="visualizer">Visualizer</string>
     <string name="random_mode">Random mode</string>
     <string name="settings">Settings</string>
-    <string name="about">About&#8230;</string>
+    <string name="about">About</string>
     <string name="exit">Exit</string>
     <string name="move">Move</string>
     <string name="remove">Remove</string>
@@ -204,6 +204,7 @@
     <string name="highlight_background">Highlight background</string>
     <string name="icon">Icon</string>
     <string name="border">Border</string>
+    <string name="borders">Borders</string>
     <string name="divider">Divider</string>
     <string name="text">Text</string>
     <string name="text_secondary">Text (secondary)</string>
@@ -243,7 +244,7 @@
     <string name="opengl_error">OpenGL error</string>
     <string name="opengl_not_supported">No support for OpenGL ES 2.0</string>
     <string name="speed">Speed</string>
-    <string name="add_radio">Radio&#8230;</string>
+    <string name="add_radio">Radio</string>
     <string name="search">Search</string>
     <string name="genre">Genre</string>
     <string name="search_term">Search term</string>
@@ -277,7 +278,7 @@
     <string name="diffusion">Diffusion</string>
     <string name="msg_immersive">&#8634; Move your device around (be careful!)</string>
     <string name="msg_no_sensors">Sorry, but your device does not have the necessary sensors :(</string>
-    <string name="tutorial">Tutorial&#8230;</string>
+    <string name="tutorial">Tutorial</string>
     <string name="information">Information</string>
 
     <string name="bt_inactive">Bluetooth inactive</string>
